--- a/UT2/EC/04/19.ejercicio.html
+++ b/UT2/EC/04/19.ejercicio.html
@@ -1,11 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tabla compleja Ej19</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Planets Data Table</title>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            padding: 10px;
+            text-align: center;
+            border: 1px solid #ddd;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+        caption {
+            caption-side: top;
+            font-weight: bold;
+            font-size: 1.5em;
+        }
+        .row-span {
+            vertical-align: middle;
+        }
+    </style>
 </head>
 <body>
-  
+    <table>
+        <caption>Data about the planets of our solar system (Planetary facts taken from <a href="https://nssdc.gsfc.nasa.gov/planetary/factsheet/" target="_blank">NASA's Planetary Fact Sheet</a> - <a href="https://nssdc.gsfc.nasa.gov/planetary/factsheet/planet_table_metric.html" target="_blank">Metric</a>)</caption>
+        <thead>
+            <tr>
+                <th rowspan="2">Name</th>
+                <th rowspan="2">Mass (10<sup>24</sup>kg)</th>
+                <th rowspan="2">Diameter (km)</th>
+                <th rowspan="2">Density (kg/m<sup>3</sup>)</th>
+                <th rowspan="2">Gravity (m/s<sup>2</sup>)</th>
+                <th rowspan="2">Length of day (hours)</th>
+                <th rowspan="2">Distance from Sun (10<sup>6</sup>km)</th>
+                <th rowspan="2">Mean temperature (°C)</th>
+                <th rowspan="2">Number of moons</th>
+                <th rowspan="2">Notes</th>
+            </tr>
+            <tr>
+                <!-- This row is intentionally left blank for proper column grouping -->
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th class="row-span" rowspan="4">Terrestrial planets</th>
+                <td>Mercury</td>
+                <td>0.330</td>
+                <td>4,879</td>
+                <td>5,427</td>
+                <td>3.7</td>
+                <td>4222.6</td>
+                <td>57.9</td>
+                <td>167</td>
+                <td>0</td>
+                <td>Closest to the Sun</td>
+            </tr>
+            <tr>
+                <td>Venus</td>
+                <td>4.87</td>
+                <td>12,104</td>
+                <td>5,243</td>
+                <td>8.9</td>
+                <td>2802.0</td>
+                <td>108.2</td>
+                <td>464</td>
+                <td>0</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Earth</td>
+                <td>5.97</td>
+                <td>12,756</td>
+                <td>5,514</td>
+                <td>9.8</td>
+                <td>24.0</td>
+                <td>149.6</td>
+                <td>15</td>
+                <td>1</td>
+                <td>Our world</td>
+            </tr>
+            <tr>
+                <td>Mars</td>
+                <td>0.642</td>
+                <td>6,792</td>
+                <td>3,933</td>
+                <td>3.7</td>
+                <td>24.7</td>
+                <td>227.9</td>
+                <td>-65</td>
+                <td>2</td>
+                <td>The red planet</td>
+            </tr>
+            <tr>
+                <th class="row-span" rowspan="4">Jovian planets</th>
+                <th class="row-span" rowspan="2">Gas giants</th>
+                <td>Jupiter</td>
+                <td>1898</td>
+                <td>142,984</td>
+                <td>1,326</td>
+                <td>23.1</td>
+                <td>9.9</td>
+                <td>778.6</td>
+                <td>-110</td>
+                <td>67</td>
+                <td>The largest planet</td>
+            </tr>
+            <tr>
+                <td>Saturn</td>
+                <td>568</td>
+                <td>120,536</td>
+                <td>687</td>
+                <td>9.0</td>
+                <td>10.7</td>
+                <td>1433.5</td>
+                <td>-140</td>
+                <td>62</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th class="row-span" rowspan="2">Ice giants</th>
+                <td>Uranus</td>
+                <td>86.8</td>
+                <td>51,118</td>
+                <td>1,271</td>
+                <td>8.7</td>
+                <td>17.2</td>
+                <td>2872.5</td>
+                <td>-195</td>
+                <td>27</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Neptune</td>
+                <td>102</td>
+                <td>49,528</td>
+                <td>1,638</td>
+                <td>11.0</td>
+                <td>16.1</td>
+                <td>4495.1</td>
+                <td>-200</td>
+                <td>14</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th class="row-span" rowspan="1">Dwarf planets</th>
+                <td>Pluto</td>
+                <td>0.0146</td>
+                <td>2,370</td>
+                <td>2,065</td>
+                <td>0.7</td>
+                <td>153.3</td>
+                <td>5906.4</td>
+                <td>-225</td>
+                <td>5</td>
+                <td>Declassified as a planet in 2006, but this remains controversial</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
