--- a/UT3/EC/07/index.html
+++ b/UT3/EC/07/index.html
@@ -1,73 +1,110 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página de Noticias</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header class="header">
-        <div class="logo">W.</div>
-        <nav class="navigation">
-            <a href="#">Home</a>
-            <a href="#">New</a>
-            <a href="#">Popular</a>
-            <a href="#">Trending</a>
-            <a href="#">Categories</a>
-        </nav>
+      <div class="logo">W.</div>
+      <nav class="navigation">
+        <a href="#">Home</a>
+        <a href="#">New</a>
+        <a href="#">Popular</a>
+        <a href="#">Trending</a>
+        <a href="#">Categories</a>
+      </nav>
     </header>
     <main class="main-container">
-        <section class="main-news">
-            <img src="maquinasfuturo.jpg" alt="Imagen principal" class="main-news-image">
-            <div class="main-news-content">
-                <h1 class="main-news-title">The Bright Future of Web 3.0?</h1>
-                <p class="main-news-description">We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
-                <button class="read-more-button">Read More</button>
-            </div>
-        </section>
-        <section class="new-articles">
-            <h2 class="new-articles-title">New</h2>
-            <div class="article">
-                <h3 class="article-title">Hydrogen VS Electric Cars</h3>
-                <p class="article-description">Will hydrogen-fueled cars ever catch up to EVs?</p>
-            </div>
-            <div class="article">
-                <h3 class="article-title">The Downsides of AI Artistry</h3>
-                <p class="article-description">What are the possible adverse effects of on-demand AI image generation?</p>
-            </div>
-            <div class="article">
-                <h3 class="article-title">Is VC Funding Drying Up?</h3>
-                <p class="article-description">Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
-            </div>
-        </section>
-        <section class="secondary-articles">
-            <div class="secondary-article">
-                <img src="retropcs.avif" alt="Imagen del artículo" class="secondary-article-image">
-                <div class="secondary-article-content">
-                    <h3 class="secondary-article-title">01</h3>
-                    <h4 class="secondary-article-subtitle">Reviving Retro PCs</h4>
-                    <p class="secondary-article-description">What happens when old PCs are given modern upgrades?</p>
-                </div>
-            </div>
-            <div class="secondary-article">
-                <img src="laptopsteclao.avif" alt="Imagen del artículo" class="secondary-article-image">
-                <div class="secondary-article-content">
-                    <h3 class="secondary-article-title">02</h3>
-                    <h4 class="secondary-article-subtitle">Top 10 Laptops of 2022</h4>
-                    <p class="secondary-article-description">Our best picks for various needs and budgets.</p>
-                </div>
-            </div>
-            <div class="secondary-article">
-                <img src="mando.jpg" alt="Imagen del artículo" class="secondary-article-image">
-                <div class="secondary-article-content">
-                    <h3 class="secondary-article-title">03</h3>
-                    <h4 class="secondary-article-subtitle">The Growth of Gaming</h4>
-                    <p class="secondary-article-description">How the pandemic has sparked fresh opportunities.</p>
-                </div>
-            </div>
-        </section>
+      <section class="main-news">
+        <img
+          src="maquinasfuturo.jpg"
+          alt="Imagen principal"
+          class="main-news-image"
+        />
+        <div class="main-news-content">
+          <h1 class="main-news-title">The Bright Future of Web 3.0?</h1>
+          <p class="main-news-description">
+            We dive into the next evolution of the web that claims to put the
+            power of the platforms back into the hands of the people. But is it
+            really fulfilling its promise?
+          </p>
+          <button class="read-more-button">Read More</button>
+        </div>
+      </section>
+      <section class="new-articles">
+        <h2 class="new-articles-title">New</h2>
+        <div class="article">
+          <h3 class="article-title">Hydrogen VS Electric Cars</h3>
+          <p class="article-description">
+            Will hydrogen-fueled cars ever catch up to EVs?
+          </p>
+        </div>
+        <div class="article">
+          <h3 class="article-title">The Downsides of AI Artistry</h3>
+          <p class="article-description">
+            What are the possible adverse effects of on-demand AI image
+            generation?
+          </p>
+        </div>
+        <div class="article">
+          <h3 class="article-title">Is VC Funding Drying Up?</h3>
+          <p class="article-description">
+            Private funding by VC firms is down 50% YOY. We take a look at what
+            that means.
+          </p>
+        </div>
+      </section>
+      <section class="secondary-articles">
+        <div class="secondary-article">
+          <img
+            src="retropcs.avif"
+            alt="Imagen del artículo"
+            class="secondary-article-image"
+          />
+          <div class="secondary-article-content">
+            <h3 class="secondary-article-title">01</h3>
+            <h4 class="secondary-article-subtitle">Reviving Retro PCs</h4>
+            <p class="secondary-article-description">
+              What happens when old PCs are given modern upgrades?
+            </p>
+          </div>
+        </div>
+        <div class="secondary-article">
+          <img
+            src="laptopsteclao.avif"
+            alt="Imagen del artículo"
+            class="secondary-article-image"
+          />
+          <div class="secondary-article-content">
+            <h3 class="secondary-article-title">02</h3>
+            <h4 class="secondary-article-subtitle">Top 10 Laptops of 2022</h4>
+            <p class="secondary-article-description">
+              Our best picks for various needs and budgets.
+            </p>
+          </div>
+        </div>
+        <div class="secondary-article">
+          <img
+            src="mando.jpg"
+            alt="Imagen del artículo"
+            class="secondary-article-image"
+          />
+          <div class="secondary-article-content">
+            <h3 class="secondary-article-title">03</h3>
+            <h4 class="secondary-article-subtitle">The Growth of Gaming</h4>
+            <p class="secondary-article-description">
+              How the pandemic has sparked fresh opportunities.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
