--- a/compra-zapatillas/product.html
+++ b/compra-zapatillas/product.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Pacifico&display=swap">
   <link rel="stylesheet" href="css/styles.css">
   <title>Productos - Compra Zapatillas</title>
 </head>
 <body>
   <header>
-    <img src="assets/logo.png" alt="Logo" class="logo">
+    <div class="logo">Zapaturbo</div>
     <nav>
       <ul>
         <li><a href="index.html">Inicio</a></li>
@@ -23,23 +24,31 @@
       <h1>Nuestros Productos</h1>
       <div class="products">
         <div class="product-card">
-          <img src="assets/images/zapatilla1.jpg" alt="Zapatilla 1" class="product-image">
-          <h3>Zapatilla 1</h3>
+          <a href="product1.html">
+            <img src="assets/images/zapatilla1.jpg" alt="Zapatilla 1" class="product-image">
+            <h3>Zapatilla 1</h3>
+          </a>
           <p>Descripción breve del producto.</p>
         </div>
         <div class="product-card">
-          <img src="assets/images/zapatilla2.jpg" alt="Zapatilla 2" class="product-image">
-          <h3>Zapatilla 2</h3>
+          <a href="product2.html">
+            <img src="assets/images/zapatilla2.jpg" alt="Zapatilla 2" class="product-image">
+            <h3>Zapatilla 2</h3>
+          </a>
           <p>Descripción breve del producto.</p>
         </div>
         <div class="product-card">
-          <img src="assets/images/zapatilla3.jpg" alt="Zapatilla 3" class="product-image">
-          <h3>Zapatilla 3</h3>
+          <a href="product1.html">
+            <img src="assets/images/zapatilla3.jpg" alt="Zapatilla 3" class="product-image">
+            <h3>Zapatilla 3</h3>
+          </a>
           <p>Descripción breve del producto.</p>
         </div>
         <div class="product-card">
-          <img src="assets/images/zapatilla4.jpg" alt="Zapatilla 4" class="product-image">
-          <h3>Zapatilla 4</h3>
+          <a href="product2.html">
+            <img src="assets/images/zapatilla4.jpg" alt="Zapatilla 4" class="product-image">
+            <h3>Zapatilla 4</h3>
+          </a>
           <p>Descripción breve del producto.</p>
         </div>
       </div>
@@ -53,6 +62,6 @@
       <a href="#">Instagram</a>
     </p>
   </footer>
-  <script src="js/script.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
