--- a/compra-zapatillas/about.html
+++ b/compra-zapatillas/about.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Pacifico&display=swap">
   <link rel="stylesheet" href="css/styles.css">
   <title>Acerca de - Compra Zapatillas</title>
 </head>
 <body>
   <header>
-    <img src="assets/logo.png" alt="Logo" class="logo">
+    <div class="logo">Zapaturbo</div>
     <nav>
       <ul>
         <li><a href="index.html">Inicio</a></li>
@@ -21,7 +22,16 @@
   <main>
     <section>
       <h1>Acerca de Nosotros</h1>
-      <p>Somos una tienda dedicada a ofrecer las mejores zapatillas del mercado, combinando estilo y comodidad.</p>
+      <div class="about-content">
+        <div class="text-content">
+          <p>En Zapaturbo, nos apasiona ofrecer las mejores zapatillas del mercado, combinando estilo, comodidad y tecnología avanzada. Desde nuestra fundación, nos hemos comprometido a brindar productos de alta calidad que satisfagan las necesidades de nuestros clientes.</p>
+          <p>Nuestra misión es proporcionar una experiencia de compra excepcional y garantizar que cada cliente encuentre el calzado perfecto para sus actividades diarias, deportivas y de ocio. Con una amplia gama de marcas y estilos, estamos seguros de que tenemos algo para todos.</p>
+          <p>Además de nuestra extensa selección de zapatillas, nos enorgullecemos de nuestro excelente servicio al cliente. Nuestro equipo está siempre disponible para ayudar y asesorar a nuestros clientes en cada paso de su compra.</p>
+        </div>
+        <div class="image-content">
+          <img src="assets/images/sobrenosotros.jpg" alt="Sobre Nosotros">
+        </div>
+      </div>
     </section>
   </main>
   <footer>
@@ -32,6 +42,6 @@
       <a href="#">Instagram</a>
     </p>
   </footer>
-  <script src="js/script.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
