final update pagina web

--- a/compra-zapatillas/index.html
+++ b/compra-zapatillas/index.html
@@ -22,12 +22,12 @@
   <main>
     <section class="hero">
       <h1>Bienvenido a Zapaturbo</h1>
-      <p>Descubre las mejores zapatillas del mercado, combinando estilo y comodidad.</p>
+      <p>Descubre las mejores zapatillas para cada ocasión.</p>
       <a href="product.html" class="cta-button">Ver Productos</a>
     </section>
   </main>
   <footer>
-    <p>Contacto: contacto@zapatillas.com</p>
+    <p>Contacto: zapaturbo@gmail.com</p>
     <p>Síguenos en:
       <a href="#">Facebook</a>,
       <a href="#">Twitter</a>,
