--- a/compra-zapatillas/product.html
+++ b/compra-zapatillas/product.html
@@ -27,35 +27,35 @@
           <a href="product1.html">
             <img src="assets/images/zapatilla1.jpg" alt="Zapatilla 1" class="product-image">
             <h3>Zapatilla 1</h3>
+            <p>NIKE Sportswear Air Force 1 '07</p>
           </a>
-          <p>Descripción breve del producto.</p>
         </div>
         <div class="product-card">
           <a href="product2.html">
             <img src="assets/images/zapatilla2.jpg" alt="Zapatilla 2" class="product-image">
             <h3>Zapatilla 2</h3>
+            <p>Nike Sportswear LIFESTYLE AIR MAX EXEE</p>
           </a>
-          <p>Descripción breve del producto.</p>
         </div>
         <div class="product-card">
-          <a href="product1.html">
+          <a href="product3.html">
             <img src="assets/images/zapatilla3.jpg" alt="Zapatilla 3" class="product-image">
             <h3>Zapatilla 3</h3>
+            <p>Kappa Zapatillas de entrenamiento</p>
           </a>
-          <p>Descripción breve del producto.</p>
         </div>
         <div class="product-card">
-          <a href="product2.html">
+          <a href="product4.html">
             <img src="assets/images/zapatilla4.jpg" alt="Zapatilla 4" class="product-image">
             <h3>Zapatilla 4</h3>
+            <p>New Balance 327 UNISEX</p>
           </a>
-          <p>Descripción breve del producto.</p>
         </div>
       </div>
     </section>
   </main>
   <footer>
-    <p>Contacto: contacto@zapatillas.com</p>
+    <p>Contacto: zapaturbo@gmail.com</p>
     <p>Síguenos en:
       <a href="#">Facebook</a>,
       <a href="#">Twitter</a>,
