--- a/compra-zapatillas/contact.html
+++ b/compra-zapatillas/contact.html
@@ -35,7 +35,7 @@
     </form>
   </main>
   <footer>
-    <p>Contacto: contacto@zapatillas.com</p>
+    <p>Contacto: zapaturbo@gmail.com</p>
     <p>Síguenos en:
       <a href="#">Facebook</a>,
       <a href="#">Twitter</a>,
